--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        
+ Olá, me chamo Euriane sou estudante do ensino medio e do curso de informática,tenho 17 anos 
     </main>
 
     <footer>
