--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
     </header>
 
     <main>
+        <h3>euriane soares</h3>
         <br>
- Olá, me chamo Euriane sou estudante do ensino medio e do curso de informática,tenho 17 anos 
+        <p>olá, me chamo Euriane tenho 17 anos sou estudante do ensino medio e faço curso de informática,</p>
     </main>
 
     <footer>
-        <p>site desenvolvido por <span>Euriane Soares</span> no curso de informatica <span>way cursos</span></p>
+        <p>site desenvolvido por <span>Euriane Soares</span> no curso de informática <span>way cursos</span></p>
     </footer>
 </body>
 </html>
