--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <h3>euriane soares</h3>
         <br>
-        <p>olá, me chamo Euriane tenho 17 anos sou estudante do ensino medio e faço curso de informática,</p>
+        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, sou estudante do ensino medio e faço curso de informática, no curso, estudo sobre html e css. <br> quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre </p>
     </main>
 
     <footer>
