--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
     </header>
 
     <main>
-        <h3>euriane soares</h3>
+        <div id="nome">
+            <h3>Euriane Soares</h3>
+
+        </div>
         <br>
-        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, sou estudante do ensino medio e faço curso de informática, no curso, estudo sobre html e css. <br> quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre </p>
+        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, sou estudante do ensino medio e faço curso de informática, no curso, estudo sobre html e css. <br> quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
     </main>
 
     <footer>
