--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         </nav>
     </header>
 
-    <main>
+    <main> 
         <div id="nome">
-            <h3>Euriane Soares</h3>
+            <h2>Euriane Soares</h2>
 
         </div>
         <br>
-        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, <br> Sou estudante do ensino medio e faço curso de informática, no curso, estudo sobre html e css. <br> quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
+        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, <br> Sou estudante do ensino medio e faço curso de informática, no curso, estudo sobre html e css. <br> Quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
     </main>
 
     <footer>
