--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="menu">
                 <a href="index.html" class="menu">início</a>
                 
-                <a href="hobbys" class="menu">hobbys</a>
+                <a href="hobbys.html" class="menu">hobbys</a>
             </div>
         </nav>
     </header>
@@ -39,7 +39,7 @@
 
         </div>
         <br>
-        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, <br> Sou estudante do ensino medio e faço curso de informática, no curso, estudo sobre html e css. <br> Quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
+        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, <br> Sou estudante do ensino medio e faço curso de informática.No curso, estudo sobre html e css. <br> Quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
     </main>
 
     <footer>
