--- a/hobbys.html
+++ b/hobbys.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euriane soares</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/faviconme.ico" type="image/x-icon">
     <script src="script.js"></script>
 </head>
 <body>
@@ -34,12 +34,12 @@
 
     <main>
         <div id="titulo">
-            <h2>hobbys</h2>
+            <h2> Meus hobbys</h2>
 
         </div>
         <br>
         <p>
-            
+            Uma das coisa que mais gosto de fazer no meu tempo livre é ver series e filmes normalmente de ação,gosto muito de ler livros também mais com asssuntos diferentes dos filme e series como romance por exemplo
         </p>
         
     </main>
