--- a/hobbys.html
+++ b/hobbys.html
@@ -34,12 +34,16 @@
 
     <main>
         <div id="titulo">
-            <h2> Meus hobbys</h2>
+            <h2>Hobbys</h2>
 
         </div>
         <br>
         <p>
-            Uma das coisa que mais gosto de fazer no meu tempo livre é ver series e filmes normalmente de ação,gosto muito de ler livros também mais com asssuntos diferentes dos filme e series como romance por exemplo
+            Uma das coisa que mais gosto de fazer no meu tempo livre é ver séries e filmes normalmente de ação,gosto muito de ler livros também mais com asssuntos totalmente diferentes dos filme e séries como romance por exemplo.
+            <br>
+            <p>
+                Gosto de sair com minha familia e amigos,viajar e ir praia 
+            </p>
         </p>
         
     </main>
