--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="desenvolvimento, Euriane Soares, curso">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Euriane soares</title>
+    <title>Euriane Soares</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/faviconme.ico" type="image/x-icon">
     <script src="script.js"></script>
