--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </div>
         <br>
-        <p>olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, <br> Sou estudante do ensino medio e faço curso de informática.<br>No curso, estudo sobre html e css, estou gostando muito de aprender programação e espero usar no futuro. <br> Quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
+        <p>Olá, me chamo Euriane tenho 17 anos, moro no Ceará na cidade de Cascavel, <br> Sou estudante do ensino medio e faço curso de informática.<br>No curso, estudo sobre html e css, estou gostando muito de aprender programação e espero usar no futuro. <br> Quero fazer faculdade no futuro mas não sei qual curso em específico, no momento penso em psicologia, pois é uma profisão que ajuda as pessoas e que tenho interesse em saber sobre. </p>
     </main>
 
     <footer>
