--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Euriane Soares</h1>
             <p>estudante</p>
         </div>
-        <img src="images/perfil-ela.jpg" alt="Euriane Soares" id="fotoperfil">
+        <img src="perfil2.jpg" alt="Euriane Soares" id="fotoperfil">
         <nav>
             <div id="menu">
                 <a href="index.html" class="menu">início</a>
