--- a/hobbys.html
+++ b/hobbys.html
@@ -23,7 +23,7 @@
             <h1>Euriane Soares</h1>
             <p>estudante</p>
         </div>
-        <img src="images/perfil-ela.jpg" alt="Euriane Soares" id="fotoperfil">
+        <img src="perfil2.jpg" alt="Euriane Soares" id="fotoperfil">
         <nav>
             <div id="menu">
                 <a href="index.html" class="menu">início</a>
@@ -38,13 +38,13 @@
 
         </div>
         <br>
-        <p>
-            Uma das coisa que mais gosto de fazer no meu tempo livre é ver séries e filmes normalmente de ação,gosto muito de ler livros também mais com asssuntos totalmente diferentes dos filme e séries como romance por exemplo.
+    </p>
+            Uma das coisa que mais gosto de fazer no meu tempo livre é ver séries e filmes normalmente de ação. <br> Gosto muito de ler livros também mais,com asssuntos totalmente diferentes dos filme e séries como romance por exemplo.
             <br>
-            <p>
-                Gosto de sair com minha familia e amigos,viajar e ir praia 
-            </p>
-        </p>
+        <p>
+             </p>
+             Gosto de sair com meus amigos,ir a praia e ao cinema e passar um tempo com minha família
+        <p>
         
     </main>
 
